--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Noto Sans KR', sans-serif;
+  background-color: rgb(24, 24, 24);
 }
 
 .container {
@@ -107,7 +108,6 @@ section {
     url(./img/mainVideo.png);
   background-repeat: no-repeat;
   background-size: contain;
-  position: absolute;
 }
 
 .mainPhoto {
@@ -115,20 +115,17 @@ section {
 }
 
 .intro {
-  padding: 135px 0 0 60px;
+  padding: 30px 60px;
   width: 36%;
+  height: 70%;
   display: flex;
   flex-direction: column;
   font-size: 1.6rem;
   margin-bottom: 30px;
-  z-index: 0;
+  justify-content: space-around;
 }
 
-.wind {
-  margin: 0 0 30px 0;
-}
 .bt {
-  display: flex;
   line-height: 88%;
   margin-top: 1.5vw;
   white-space: nowrap;
@@ -136,7 +133,7 @@ section {
 
 .bt button {
   height: 58px;
-  font-size: 100%;
+  font-size: 15pt;
   border-radius: 5px;
   border: 0;
   cursor: pointer;
@@ -147,24 +144,29 @@ section {
 }
 
 .play {
-  width: 20%;
+  width: 100px;
   color: #111;
   margin-right: 5px;
+  padding-left: 2rem;
+  padding-right: 2.4rem;
 }
 
 .infor {
-  width: 30%;
+  width: 150px;
   background-color: gray;
   opacity: 0.8;
   color: #fff;
+  padding-left: 2rem;
+  padding-right: 2.4rem;
+}
+
+h3 {
+  padding: 20px 0;
 }
 
 .contents {
-  z-index: 0;
   color: white;
   padding: 0 60px;
-  position: relative;
-  margin-top: 50rem;
 }
 
 .video {
@@ -200,15 +202,13 @@ section {
 }
 
 footer {
-  background-color: rgb(24, 24, 24);
-  color: grey;
-  margin: auto 0;
-  padding: 0 4%;
-}
-
-.footer {
   width: 60%;
   margin: 0 auto;
+  background-color: rgb(24, 24, 24);
+  color: grey;
+  padding: 0 4%;
+  display: flex;
+  flex-direction: column;
 }
 
 .social {
@@ -298,22 +298,18 @@ footer {
     width: auto;
     font-size: 1.5rem;
   }
-
-  .videoList {
-    width: 100%;
-    gap: 1em;
-  }
   .list {
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
 @media (max-width: 1500px) {
-  .bt button {
-    font-size: auto;
+  .mainView {
+    height: 100%;
   }
-  .contents {
-    margin-top: 40rem;
+  .bt button {
+    font-size: 10pt;
+    text-align: center;
   }
   .list {
     grid-template-columns: repeat(3, 1fr);
@@ -321,9 +317,6 @@ footer {
 }
 
 @media (max-width: 1000px) {
-  .contents {
-    margin-top: 35rem;
-  }
   .list {
     grid-template-columns: repeat(2, 1fr);
   }
