반응형 수정

--- a/index.css
+++ b/index.css
@@ -332,3 +332,11 @@ footer {
     grid-template-columns: repeat(1, 1fr);
   }
 }
+@media (max-width: 390px) {
+  .contents {
+    padding: 0;
+  }
+  .list {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
