반응형 수정

--- a/index.css
+++ b/index.css
@@ -328,6 +328,9 @@ footer {
   }
 }
 @media (max-width: 830px) {
+  .contents {
+    padding: 0;
+  }
   .list {
     grid-template-columns: repeat(1, 1fr);
   }
